--- a/core/api/typescript/package.json
+++ b/core/api/typescript/package.json
@@ -39,11 +39,13 @@
         "grpc-web": "^1.3.0",
         "loglevel": "^1.7.1",
         "neverthrow": "^4.2.2",
-        "path-browserify": "^1.0.1"
+        "path-browserify": "^1.0.1",
+        "targz": "^1.0.1"
     },
     "devDependencies": {
         "@types/chai": "^4.2.21",
         "@types/mocha": "^9.0.0",
+        "@types/targz": "^1.0.1",
         "chai": "^4.3.4",
         "mocha": "^9.0.3",
         "ts-mocha": "^8.0.0",
