--- a/cli/internal_testsuites/typescript/package.json
+++ b/cli/internal_testsuites/typescript/package.json
@@ -11,7 +11,7 @@
     "example-api-server-api-lib": "^0.3.4",
     "example-datastore-server-api-lib": "^0.4.4",
     "jest": "^27.3.1",
-    "kurtosis-core-api-lib": "kurtosis-tech/kurtosis-core-api-lib#gmarchetti\/expose-docker-pause-unpause",
+    "kurtosis-core-api-lib": "file:/./tmp/kurtosis-core-api-lib-1.45.0.tgz",
     "kurtosis-engine-api-lib": "1.14.4",
     "loglevel": "^1.8.0",
     "neverthrow": "^4.3.1",
