--- a/core/api/typescript/package.json
+++ b/core/api/typescript/package.json
@@ -45,6 +45,7 @@
     "devDependencies": {
         "@types/chai": "^4.2.21",
         "@types/mocha": "^9.0.0",
+        "@types/tar": "^6.1.1",
         "@types/targz": "^1.0.1",
         "chai": "^4.3.4",
         "mocha": "^9.0.3",
