--- a/container-engine-lib/.circleci/config.yml
+++ b/container-engine-lib/.circleci/config.yml
@@ -4,6 +4,14 @@ orbs:
   npm-publisher: uraway/npm-publisher@0.2.0
   kurtosis-docs-checker: kurtosis-tech/docs-checker@0.2.0
 
+parameters:
+  go-version:
+    type: string
+    default: 1.16
+  build-cache-key-prefix:
+    type: string
+    default: "go-mod-v1"   # Can bump this version to bust the cache
+
 # NOTE: Because CircleCI jobs run on separate machines from each other, we duplicate steps (like checkout) between jobs. This is because doing the "correct" DRY
 #  refactoring of, "one job for checkout, one job for build Docker image, etc." would require a) persisting files between jobs and b) persisting Docker images between
 #  jobs. Both are annoying (saving/loading workspaces require re-downloading the workspace over the network, and there doesn't seem to be a good way to do Docker
@@ -13,6 +21,10 @@ jobs:
   check_code:
     docker:
       - image: cimg/go:1.16
+
+    # Done on 2022-05-15, when the job was 1m30s and CircleCI insights showed that we were maxing out the 'medium' class CPUs
+    resource_class: large
+
     steps:
       - checkout
 
@@ -23,10 +35,21 @@ jobs:
             circleci-agent step halt
           fi
 
+      # Cache our dependencies
+      - restore_cache:
+          keys:
+            - << pipeline.parameters.build-cache-key-prefix>>-{{ checksum "go.sum" }}
+
       - run: |
           git config --global url."https://${KURTOSISBOT_GITHUB_TOKEN}@github.com/".insteadOf "https://github.com/"
           go env -w "GOPRIVATE=github.com/kurtosis-tech/*"
           scripts/build.sh
+
+      - save_cache:
+          key: << pipeline.parameters.build-cache-key-prefix>>-{{ checksum "go.sum" }}
+          paths:
+            - "/home/circleci/go/pkg/mod"  # Go module cache on the cimg/go image, as reported by "go env GOMODCACHE"
+            - "/home/circleci/.cache/go-build"  # Go build cache on the cimg/go image, as reported by "go env GOCACHE"
 
 workflows:
   build:
