Patch Go version for server & launcher

--- a/core/.circleci/config.yml
+++ b/core/.circleci/config.yml
@@ -9,10 +9,15 @@ parameters:
   docker-engine-version:
     type: string
     default: 20.10.7
-  go-version:
+  api-go-version:
     type: string
     default: 1.15.13
-  node-version:
+  # Separate (and newer) than the API version because we want lots of people to be able to use the Kurtosis API and the API doesn't need to be
+  # the same version as the server
+  server-go-version:
+    type: string
+    default: 1.17
+  api-node-version:
     type: string
     default: 16.13.0
   source-repo-name:
@@ -31,7 +36,7 @@ jobs:
   # -- PR check jobs ------------------------------------------
   check_api_golang:
     docker:
-      - image: "cimg/go:<< pipeline.parameters.go-version>>"
+      - image: "cimg/go:<< pipeline.parameters.api-go-version>>"
     steps:
       - checkout
 
@@ -47,7 +52,7 @@ jobs:
 
   check_api_typescript:
     docker:
-      - image: "cimg/node:<< pipeline.parameters.node-version>>"
+      - image: "cimg/node:<< pipeline.parameters.api-node-version>>"
     steps:
       - checkout
 
@@ -62,7 +67,7 @@ jobs:
 
   check_launcher:
     docker:
-      - image: "cimg/go:<< pipeline.parameters.go-version >>"
+      - image: "cimg/go:<< pipeline.parameters.server-go-version >>"
     steps:
       - checkout
 
@@ -82,7 +87,7 @@ jobs:
 
   check_server_code:
     docker:
-      - image: "cimg/go:<< pipeline.parameters.go-version >>"
+      - image: "cimg/go:<< pipeline.parameters.server-go-version >>"
     steps:
       - checkout
 
@@ -151,7 +156,7 @@ jobs:
 
   publish_api_typescript:
     docker:
-      - image: "cimg/node:<< pipeline.parameters.node-version>>"
+      - image: "cimg/node:<< pipeline.parameters.api-node-version>>"
     steps:
       - checkout
       - run: api/typescript/scripts/build.sh
@@ -161,7 +166,7 @@ jobs:
 
   publish_server_image:
     docker:
-      - image: "cimg/go:<< pipeline.parameters.go-version >>"
+      - image: "cimg/go:<< pipeline.parameters.server-go-version >>"
     steps:
       - checkout
 
