fixed up building

--- a/core/files_artifact_expander/Dockerfile
+++ b/core/files_artifact_expander/Dockerfile
@@ -4,6 +4,6 @@ RUN apk update && apk add bash tar
 
 WORKDIR /run
 
-COPY ./build/files-artifact-expander ./run-files-artifact-expander ./
+COPY ./build/files-artifact-expander ./run-files-artifact-expander.sh ./
 
 CMD bash ./run-files-artifact-expander.sh
