Progress on hooking up latest KurtosisBackend to Core's user service-starting logic

--- a/core/files_artifacts_expander/scripts/_constants.env
+++ b/core/files_artifacts_expander/scripts/_constants.env
@@ -4,7 +4,7 @@
 #  b) how to get the version that it will push
 
 # vvvvvvvvvvvvvvvv WARNING vvvvvvvvvvvvvvvvvvvvvvvvvv
-# If you change this, you also need to change the containerImage
+# If you change this, you also need to change the 'filesArtifactsExpanderImage'
 #  constant in the 'launcher' submodule!!
 IMAGE_ORG_AND_REPO="kurtosistech/kurtosis-core_api"
 # ^^^^^^^^^^^^^^^^ WARNING ^^^^^^^^^^^^^^^^^^^^^^^^^^
