--- a/core/files_artifacts_expander/scripts/_constants.env
+++ b/core/files_artifacts_expander/scripts/_constants.env
@@ -5,8 +5,8 @@
 
 # vvvvvvvvvvvvvvvv WARNING vvvvvvvvvvvvvvvvvvvvvvvvvv
 # If you change this, you also need to change the 'filesArtifactsExpanderImage'
-#  constant in the 'launcher' submodule!!
-IMAGE_ORG_AND_REPO="kurtosistech/kurtosis-core_api"
+#  constant in the 'server' subproject!!
+IMAGE_ORG_AND_REPO="kurtosistech/kurtosis-files-artifacts-expander"
 # ^^^^^^^^^^^^^^^^ WARNING ^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 GET_DOCKER_IMAGE_TAG_SCRIPT_FILENAME="get-docker-image-tag.sh"
