--- a/core/server/scripts/_constants.env
+++ b/core/server/scripts/_constants.env
@@ -1,7 +1,7 @@
-# These constants are in their own file, rather inline in the build.sh script, because the CircleCI job that pushes
-# the image to Dockerhub needs to know:
-#  a) what image it's pushing
-#  b) how to get the version that it will push
+# These constants are in their own file, rather inline in the build.sh script, because multiple agents need
+# to know what image is being built and how to get a version tag:
+#  - build.sh
+#  - CircleCI job that pushes the imag to Dockerhub
 
 # vvvvvvvvvvvvvvvv WARNING vvvvvvvvvvvvvvvvvvvvvvvvvv
 # If you change this, you also need to change the containerImage
