move to kudet for getting docker image tags

--- a/core/server/scripts/_constants.env
+++ b/core/server/scripts/_constants.env
@@ -9,4 +9,4 @@
 IMAGE_ORG_AND_REPO="kurtosistech/kurtosis-core_api"
 # ^^^^^^^^^^^^^^^^ WARNING ^^^^^^^^^^^^^^^^^^^^^^^^^^
 
-GET_DOCKER_IMAGE_TAG_SCRIPT_FILENAME="get-docker-image-tag.sh"
+GET_DOCKER_IMAGE_TAG_CMD="kudet get-docker-tag"
