migrate circle ci to use kudet for docker image tags

--- a/core/.circleci/config.yml
+++ b/core/.circleci/config.yml
@@ -161,18 +161,23 @@ jobs:
           for pattern in "*.go" "go.mod" "*.proto"; do
             sed -i 's,github.com/kurtosis-tech/kurtosis-core,github.com/kurtosis-tech/<< pipeline.parameters.source-repo-name >>,g' $(find . -type f -name "${pattern}")
           done
+      # Install Kudet
+      - run: |
+          echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
+          sudo apt update
+          sudo apt install kudet
       # Push the code up to the remote
       - run: |
           source server/scripts/_constants.env
-          version="$(bash "server/scripts/${GET_DOCKER_IMAGE_TAG_SCRIPT_FILENAME}")"
-          cd /tmp/<< pipeline.parameters.source-repo-name >>
-          git config --global user.name "${KURTOSISBOT_GITHUB_USERNAME}"
-          git config --global user.email "${KURTOSISBOT_GITHUB_EMAIL}"
-          git add .
-          git commit -m "Committing ${version} files"
-          git push origin master
-          git tag "${version}"
-          git push --tags
+          version="$(${GET_DOCKER_IMAGE_TAG_CMD})"
+#          cd /tmp/<< pipeline.parameters.source-repo-name >>
+#          git config --global user.name "${KURTOSISBOT_GITHUB_USERNAME}"
+#          git config --global user.email "${KURTOSISBOT_GITHUB_EMAIL}"
+#          git add .
+#          git commit -m "Committing ${version} files"
+#          git push origin master
+#          git tag "${version}"
+#          git push --tags
 
   publish_api_typescript:
     docker:
@@ -196,17 +201,21 @@ jobs:
 
       # Doesn't actually use any Kurtosis private repos so doesn't need the Go-private-repo Git config magic
       - run: files_artifacts_expander/scripts/build.sh
-
+      # Install Kudet
+      - run: |
+          echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
+          sudo apt update
+          sudo apt install kudet
       - run: |
           set -euo pipefail
           source files_artifacts_expander/scripts/_constants.env
-          version_to_publish="$(bash "files_artifacts_expander/scripts/${GET_DOCKER_IMAGE_TAG_SCRIPT_FILENAME}")"
+          version_to_publish="$(${GET_DOCKER_IMAGE_TAG_CMD})"
           echo "Version that will be published: ${version_to_publish}"
-          image_name_with_version="${IMAGE_ORG_AND_REPO}:${version_to_publish}"
-          image_name_no_version="${IMAGE_ORG_AND_REPO}:latest"
-          docker tag "${image_name_with_version}" "${image_name_no_version}"
-          docker push "${image_name_with_version}"
-          docker push "${image_name_no_version}"
+#          image_name_with_version="${IMAGE_ORG_AND_REPO}:${version_to_publish}"
+#          image_name_no_version="${IMAGE_ORG_AND_REPO}:latest"
+#          docker tag "${image_name_with_version}" "${image_name_no_version}"
+#          docker push "${image_name_with_version}"
+#          docker push "${image_name_no_version}"
 
   publish_server_image:
     docker:
@@ -224,17 +233,21 @@ jobs:
           git config --global url."https://${KURTOSISBOT_GITHUB_TOKEN}@github.com/".insteadOf "https://github.com/"
           go env -w "GOPRIVATE=github.com/kurtosis-tech/*"
           server/scripts/build.sh
-
+      # Install Kudet
+      - run: |
+          echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
+          sudo apt update
+          sudo apt install kudet
       - run: |
           set -euo pipefail
           source server/scripts/_constants.env
-          version_to_publish="$(bash "server/scripts/${GET_DOCKER_IMAGE_TAG_SCRIPT_FILENAME}")"
+          version_to_publish="$(${GET_DOCKER_IMAGE_TAG_CMD})"
           echo "Version that will be published: ${version_to_publish}"
-          image_name_with_version="${IMAGE_ORG_AND_REPO}:${version_to_publish}"
-          image_name_no_version="${IMAGE_ORG_AND_REPO}:latest"
-          docker tag "${image_name_with_version}" "${image_name_no_version}"
-          docker push "${image_name_with_version}"
-          docker push "${image_name_no_version}"
+#          image_name_with_version="${IMAGE_ORG_AND_REPO}:${version_to_publish}"
+#          image_name_no_version="${IMAGE_ORG_AND_REPO}:latest"
+#          docker tag "${image_name_with_version}" "${image_name_no_version}"
+#          docker push "${image_name_with_version}"
+#          docker push "${image_name_no_version}"
   # -- End publishing jobs -------------------------------------
 
 workflows:
@@ -305,7 +318,7 @@ workflows:
             - github-user
           filters:
             branches:
-              ignore: /.*/
+#              ignore: /.*/
             tags:
               only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       - publish_api_typescript:
@@ -313,7 +326,7 @@ workflows:
             - npmjs-user
           filters:
             branches:
-              ignore: /.*/
+#              ignore: /.*/
             tags:
               only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       - publish_files_artifacts_expander_image:
@@ -321,7 +334,7 @@ workflows:
             - docker-user
           filters:
             branches:
-              ignore: /.*/
+#              ignore: /.*/
             tags: 
               only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       - publish_server_image:
@@ -330,7 +343,7 @@ workflows:
             - docker-user
           filters:
             branches:
-              ignore: /.*/
+#              ignore: /.*/
             tags: 
               only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       # -- End artifact-publishing jobs ----------------------------
